# gfd

./: CMakeLists.txt  README.md  README_zh.md
docs/: API_Reference.md  Architecture.md  reason.md
examples/: 01_basic_transfer.cu  02_direct_transfer.cu  03_gpu_planned_transfer.cu  04_benchmark.cu  05_multi_gpu_benchmark.cu  06_multi_gpu_direct.cu  07_warp_spec_simple.cu  08_multi_gpu_warp_spec.cu  09_sg_warp_spec.cu
include/gfd/: copy_engine.h  cpu_polling.h  descriptor_queue.h  device.cuh  device_primitives.cuh  gfd.h  log.h  pcie_topology.h  sg_device_primitives.cuh  sg_task_queue.h  sg_warp_spec.cuh  staging_pool.h  tiled_queue.h  warp_spec.cuh  warp_spec_session.h
src/: batch_processor.cpp  copy_engine.cpp  cpu_polling.cpp  direct_submit.cpp  parallel_gather.cpp  sg_warp_spec_session.cpp  warp_spec_session.cpp
test/: test_db_small_tiles.cu  test_sg_e2e.cu  test_sg_gpu_submit.cu
